if(ENABLE_ASMJIT)
	add_executable(sum sum.cpp)
	target_compile_definitions(sum PRIVATE "ENABLE_ASMJIT")
	target_link_libraries(sum ${ASMJIT_LIBRARIES} ${ASMJIT_PERF_LIBRARIES})
	add_test(test_sum sum)
endif()
if(ENABLE_LLVMJIT)
	add_executable(sumLLVM sum.cpp)
	target_compile_definitions(sumLLVM PRIVATE "ENABLE_LLVMJIT")
	target_link_libraries(sumLLVM ${LLVM_LIBRARIES})
	add_test(test_sumLLVM sumLLVM)
endif()
